--- a/angular/src/styles.css
+++ b/angular/src/styles.css
@@ -1328,8 +1328,8 @@ button {
   --gf-btn-padding: var(--gf-btn-padding-default);
   padding: var(--gf-btn-padding);
 
-  --gf-btn-bg-default: #333;
-  --gf-btn-bg: var(--gf-btn-bg-default);
+
+  --gf-btn-bg: var(--gf-dark-bg);
 
   background-color: var(--gf-btn-bg);
 
